2021-04-25 Dusan Jocic <dusanjocic@msn>
	* [Server] Experimenting with 128 players per server
	* [Engine] ERR_DROP causes dedicated servers to enter an inoperable state instead of crashing completely and being restarted.
	* [Client] Moved client localization into C++ file

2021-04-20 Dusan Jocic <dusanjocic@msn>
	* [Client] Moved client cinematic`s into C++ file

2021-04-20 Dusan Jocic <dusanjocic@msn>
	* [Client Demo] Show error if no demo is selected

2021-04-18 Dusan Jocic <dusanjocic@msn>
	* [Convars] Decreased size of MAX_CVAR_VALUE_STRING to 256
	* [Misc] Moved astyle files to the proper folder
	* [Server] Try to send partial snapshots if a snapshot message would otherwise overflow
	* [Convars] Resend serverinfo / userinfo cvar when it is registered
	* [Server] Only update the userinfo string when really updating the userinfo.
	* [Filesystem] Fix client crash when server references packs incorrectly
	* [Filesystem] Fixed resource leak by closing all file handles
	* [Server] Fixed crash while connecting to the server
	* [SoundSystem] Fix audio buffer under-runs
	* [Convars] Added check to prevent CVAR_SYTEMINFO from overwriting existing convars
	* [SoundSystem] Fixed memory leak
	* [Misc] Fixed compiling
	* [Client] Ensure timescale is 1 once dropping to main menu from e.g timescaled demo
	* [Engine] Don't do twice "vid_restart" on first run
	* [Client] Moved client net-chain into C++ file
	* [cMake] Updated CMakeLists.txt

2021-04-11 dGr8LookinSparky <hissparkyness@gmail.com>
	* [Client]Fix the mouse sensitivity for when cl_mouseAccel is disabled.

2021-04-11 Dusan Jocic <dusanjocic@msn>
	* [Console] Fixed problems with console tab and input
	* [Console] Specify console tab to dump in the log file
	* [SoundSystem] Don't play sound while minimized
	* [SoundSystem] Don't play sound even if application is unfocused
	* [Server Demos] Fixed automatically recording server-side demos