@@ -103,4 +103,8 @@
 #define AUTOUPDATE_SERVER_NAME  "@URL_AUTOUPDATE_SERVER@"
 #endif //!AUTOUPDATE_SERVER_NAME
 
+#ifndef COMMUNITY_SERVER_NAME
+#define COMMUNITY_SERVER_NAME "@URL_COMMUNITY_SERVER@"
+#endif //!COMMUNITY_SERVER_NAME
+
 #endif //!__APPCONFIG_H__
