@@ -2,6 +2,7 @@
 	* [Server] Experimenting with 128 players per server
 	* [Engine] ERR_DROP causes dedicated servers to enter an inoperable state instead of crashing completely and being restarted.
 	* [Client] Moved client localization into C++ file
+	* [Community Server] More work on the community server
 
 2021-04-20 Dusan Jocic <dusanjocic@msn>
 	* [Client] Moved client cinematic`s into C++ file
